--- a/swift-api/src/main/resources/application-docker.properties
+++ b/swift-api/src/main/resources/application-docker.properties
@@ -9,7 +9,7 @@ spring.datasource.password=1234
 
 # Hibernate & JPA Settings
 spring.jpa.database=postgresql
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
